RESOLVED FIXED 202762
Back/Forward cache does not work after doing a favorite navigation
https://bugs.webkit.org/show_bug.cgi?id=202762
Summary Back/Forward cache does not work after doing a favorite navigation
Chris Dumez
Reported 2019-10-09 12:45:26 PDT
Back/Forward cache does not work after doing a favorites navigation. The reason is that Safari forces a process-swap, and we close the page in in the previous process to break potential opener links. This is making it impossible to go back to that cached page.
Attachments
Patch (11.36 KB, patch)
2019-10-09 13:15 PDT, Chris Dumez
no flags
Patch (11.35 KB, patch)
2019-10-12 09:38 PDT, Chris Dumez
no flags
Radar WebKit Bug Importer
Comment 1 2019-10-09 12:57:10 PDT
Chris Dumez
Comment 2 2019-10-09 13:15:24 PDT
Chris Dumez
Comment 3 2019-10-11 13:17:50 PDT
ping review?
WebKit Commit Bot
Comment 4 2019-10-12 09:20:26 PDT
Comment on attachment 380559 [details] Patch Rejecting attachment 380559 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'apply-attachment', '--no-update', '--non-interactive', 380559, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Logging in as commit-queue@webkit.org... Fetching: https://bugs.webkit.org/attachment.cgi?id=380559&action=edit Fetching: https://bugs.webkit.org/show_bug.cgi?id=202762&ctype=xml&excludefield=attachmentdata Processing 1 patch from 1 bug. Processing patch 380559 from bug 202762. Fetching: https://bugs.webkit.org/attachment.cgi?id=380559 Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Antti Koivisto']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Parsed 9 diffs from patch file(s). patching file Source/WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Source/WebKit/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Source/WebCore/history/CachedFrame.cpp Hunk #1 succeeded at 179 (offset -1 lines). patching file Source/WebCore/loader/FrameLoader.cpp patching file Source/WebCore/loader/FrameLoader.h patching file Source/WebKit/UIProcess/WebPageProxy.cpp Hunk #1 FAILED at 785. 1 out of 1 hunk FAILED -- saving rejects to file Source/WebKit/UIProcess/WebPageProxy.cpp.rej patching file Source/WebKit/WebProcess/WebPage/WebPage.cpp patching file Tools/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Tools/TestWebKitAPI/Tests/WebKitCocoa/ProcessSwapOnNavigation.mm Hunk #1 succeeded at 3224 (offset -49 lines). Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Antti Koivisto']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output: https://webkit-queues.webkit.org/results/13123562
Chris Dumez
Comment 5 2019-10-12 09:38:10 PDT
WebKit Commit Bot
Comment 6 2019-10-12 12:17:45 PDT
Comment on attachment 380829 [details] Patch Clearing flags on attachment: 380829 Committed r251049: <https://trac.webkit.org/changeset/251049>
WebKit Commit Bot
Comment 7 2019-10-12 12:17:47 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.